Changed intercambio name

--- a/templates/public/participations.html
+++ b/templates/public/participations.html
@@ -12,7 +12,7 @@
 
 <section>
     <header class="page-header">
-        <h2>&raquo Intercâmbios</h2>
+        <h2>Acordos de cooperação, parcerias e participações em eventos internacionais</h2>
     </header>
 
     <p>
@@ -24,7 +24,7 @@
     <h3>{{ event.title }}<br/>
         <small>({% if event.international %}{{ event.international }} | {% endif %}{{ event.year|int }})</small>
     </h3>
-    
+
     <p>{{ event.description }}</p>
     {% endif %}
     {% endfor %}
