--- a/templates/public/articles.html
+++ b/templates/public/articles.html
@@ -14,30 +14,24 @@
     <header class="page-header">
         <h2>Artigos publicados</h2>
     </header>
-
-    {% for article in publications.articles %}
-    {% if "deleted" not in article %}
-    <h3>{{ article.title }}</h3>
-    {% if article.subtitle != ""  %}
-    <h4>{{ article.subtitle }}</h4>
-    {% endif %}
+    {% for n in range(2017,2021) %}
+    <h3>Artigos publicados em {{ n }}</h3>
+    {% for article in publications %}
+    {% if n == article.year %}
     <ul>
-        <li><strong>Autores:</strong> {{ article.authors }}</li>
-        <li><strong>Edição:</strong>  {{ article.edition }}</li>
-        <li><strong>Revista:</strong> {{ article.publisher }}</li>
-        {% if article.number != "" %}
-        <li><strong>Número:</strong> {{ article.number }}</li>   
-        {% endif %}
-        <li><strong>Local de impressão:</strong> {{ article.location }}</li>   
-        <li><strong>Páginas:</strong> {{ article.pages }}</li>
-        <li><strong>Data:</strong> {{ article.date }}</li>
-        <li><a href="{{ article.link }}">Link para revista</a></li>
+        <li><strong>Author:</strong>  {{ article.author }}</li>
+        <li><strong>Nome:</strong>  {{ article.name }}</li>
+        <li><strong>Revista:</strong>  {{ article.title_magazine }}</li>
+        <li><strong>Ano:</strong> {{ article.year }}</li>
+        <li><strong>Volume:</strong> {{ article.volume }}</li>
+        <li><strong>ISSN:</strong> {{ article.issn }}</li>
     </ul>
     <header class="page-header">
         <h2> </h2>
     </header>
-
     {% endif %}
     {% endfor %}
+    {% endfor %}
+
 
 {% endblock %}
