--- a/templates/public/home.html
+++ b/templates/public/home.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
         </div>
-        
+
 <!--
         <div class="item">
             <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
@@ -313,7 +313,9 @@
         <div class="autoplay">
             {% for institution in institutions_with_covenant %}
             {% if "deleted" not in institution %}
+            {% if "finished" not in institution.status %}
             <div><img src="/static/assets/{{ institution.logoFile }}" alt="{{ institution.name }}"/></div>
+            {% endif %}
             {% endif %}
             {% endfor %}
         </div>
