Added a type of parternship to participations, and separated them in the public page

--- a/templates/admin/delete_participations.html
+++ b/templates/admin/delete_participations.html
@@ -22,7 +22,7 @@ $(document).ready(function() {
             })
         }
     }
-    
+
     $("#list").select2({
         data: listOfParticipations
     });
@@ -34,6 +34,7 @@ $(document).ready(function() {
         $("textarea[name=description]").val(participations.participationsInEvents[indexInParticipations].description);
         $("input[name=year]").val(participations.participationsInEvents[indexInParticipations].year);
         $("input[name=location]").val(participations.participationsInEvents[indexInParticipations].international);
+        $("select[name=type_of_participation]").val(participations.participationsInEvents[indexInParticipations].type_of_participation);
         $("input[name=index]").val(indexInParticipations);
     });
 
@@ -72,6 +73,11 @@ $(document).ready(function() {
     {{ form.year.label }}
     <br/>
     {{ form.year(required='true', class="form-control", readonly="readonly") }}
+    <br/>
+    {{ form.type_of_participation.label }}
+    <br/>
+    {{ form.type_of_participation(required='true', class="form-control", readonly="readonly") }}
+    <br/>
     <br/>
     {{ form.location.label }}
     <br/>
