--- a/templates/public/participations.html
+++ b/templates/public/participations.html
@@ -27,6 +27,7 @@
     <h4>{{ event.title }}<br/>
         <small>({% if event.international %}{{ event.international }} | {% endif %}{{ event.year|int }})</small>
     </h4>
+    <p>{{ event.description }}</p>
 
     {% endif %}
     {% endif %}
@@ -40,6 +41,7 @@
     <h4>{{ event.title }}<br/>
         <small>({% if event.international %}{{ event.international }} | {% endif %}{{ event.year|int }})</small>
     </h4>
+    <p>{{ event.description }}</p>
 
     {% endif %}
     {% endif %}
@@ -53,6 +55,7 @@
     <h4>{{ event.title }}<br/>
         <small>({% if event.international %}{{ event.international }} | {% endif %}{{ event.year|int }})</small>
     </h4>
+    <p>{{ event.description }}</p>
 
     {% endif %}
     {% endif %}
