Added information to impact tab

--- a/templates/public/impact.html
+++ b/templates/public/impact.html
@@ -15,8 +15,53 @@
         <h2>Impacto</h2>
     </header>
 
-    <p>
-    </p>
+    <p>O PPGP em sua curta existência tem produzido impactos nas dimensões educacional, social, cultural e tecnológico, na medida em que tem formado profissionais que atuam em organizações públicas, inclusive organizações escolares, com o objetivo de melhorar a qualidade da gestão e das decisões de natureza pública ao tempo em que tem qualificado o debate das questões que atingem as diferentes organizações.</p>
+    
+    <p>Até o ano de 2019 foram titulados 74  alunos demonstrando uma enorme contribuição do PPGP para melhoria das organizações públicas. Uma forma de medir o impacto das ações do PPGP pode ser a partir da inserção dos alunos em cargos de gerência em diversas instituições em função da titulação e o conjunto de propostas de intervenção com o objetivo de melhorar o desempenho das instituições.</p>
+    
+    <p>Os trabalhos  de intervenção  têm se orientado para produzir modificações em uma determinada situação de trabalho, apresentando as melhorias a serem implementadas, as competências a serem desenvolvidas, as ferramentas a serem usadas e as alterações normativas a serem produzidas.  Maiores detalhes sobre a contribuição do PPG para formação e melhoria das organizações pode ser vista em “ Egressos”.</p>
+    
+    <p>Alguns mestrandos atuam na docência em outras instituições de ensino superior, tendo adquirido novas sistemáticas de aprendizagem ao longo de sua formação no PPGP. E, naturalmente estes levam para suas práxis os conhecimentos e técnicas apreendidas durante o Mestrado.</p>
+    
+    <p>Além da formação em nível de mestrado, o PPGP  fez em parceria com  a Escola de Governo do Estado do Rio Grande do Norte o  Curso de Especialização em Gestão Pública tendo formado 44 alunos, dando enorme contribuição para a profissionalização da gestão pública. </p>
+    
+    <p>Outra forma de analisar o impacto é a atuação de seu corpo docente em  varias comissões da UFRN  e de outros fóruns acadêmicos,  na  realização de  diversos eventos acadêmicos envolvendo profissionais e acadêmicos, a exemplo do Colóquio de Gestão Pública e na participação em diversas   atividades de  outros programas de pós-graduação, na região e fora dela, tais como: participação em bancas de defesa de Teses de Doutorado e de Dissertações de Mestrado, membros de conselhos editoriais de revistas científicas, avaliadores de periódicos científicos nacionais. </p>
+    
+    <p>O corpo docente  também  tem feito  esforços para buscar a integração com outras instituições. Neste sentido, tem colaborado para a organização de eventos através de parcerias e desenvolvido pesquisas com outras instituições. No âmbito da organização  de eventos, destaca-se a colaboração com  unidades da UFRN,  no Estado do Rio Grande do Norte, como por exemplo com a Faculdade de Ciências da Saúde do Trairí, na cidade de Santa Cruz,  anos de 2016 e 2017, para realização da  segunda e terceira edição do Simpósio de Políticas Públicas de Alimentação e Nutrição,  ampliando o debate das políticas sociais no interior do Estado.  Destaca-se também a colaboração  com  a  Universidade Federal do Cariri/CE pra realização da  Semana de Administração Pública. Além disso, tem colaborado com o Congresso CONSAD de Gestão Pública realizado pelo Conselho Nacional de Secretários de Estado da Administração e com a Sociedade Brasileira de Administração Pública. No âmbito de instituições governamentais, pode-se  citar a colaboração com o  Congresso de Gestão Pública (CONGESP) realizado pela Escola de Governo do Estado do Rio Grande do Norte. </p>
+    
+    <p>A integração do Programa com outras instituições também se deu, no ano de 2017, através da atuação ativa dos professores em projetos de extensão, junto à graduação e a agentes externos, da Administração Pública e da Sociedade Civil. Destaca-se o Projeto de Extensão PES na Administração Pública, 4° edição e Projeto de Extensão PES na Administração Pública, envolvendo  mais de 30 (trinta) alunos da graduação, dois tutores, administradores, vinculados ao CRA/RN.  Através do projeto de extensão  foi feita parceria com duas escolas públicas -  a Escola Estadual Governador Walfredo Gurgel e o Centro Municipal de Educação Infantil Fernanda Jalles, objetivando a construção de planejamentos estratégicos em cada uma das unidades educacionais. O resultado foi a elaboração de dois relatórios técnicos de consultoria, propondo soluções ou minoração de problemas de gestão.</p>
+    
+    <p>Destaca-se também a  atividade docente   junto ao projeto  OASIS com interfaces com a Educação Básica por meio do projeto de extensão “JUVENTUDE, PARTICIPAÇÃO SOCIAL E DESENVOLVIMENTO TERRITORIAL: Intervivência Universitária e Formação Sociopolítica em Gestão Social no Território do Mato Grande”. O projeto Intervivência Universitária, desenvolvido desde 2009 com periodicidade bianual, integra a UFRN ao sistema público de educação básica garantindo, a estudantes de ensino médio, oportunidades formativas complementares por meio do acesso à infraestrutura e a conhecimentos gerados no meio acadêmico. Desde sua implantação já atendeu cerca de 800 jovens, e em 2018 contemplará em sua 5ª Edição 150 jovens de 5 municípios/escolas, contribuindo para formação e atuação sociopolítica juvenis com o propósito de qualificar a participação social e o desenvolvimento territorial no Território do Mato Grande e a dinamização de uma Câmara de Juventude.</p>
+    
+    <p>Outro  projeto de extensão com grande  impacto foi o de  Condições de Trabalho no Serviço Público no Centro Estadual de Educação Profissional Profª Lourdinha Guerra em Parnamirim-RN, escola técnica de tempo integral com cursos de Informática e manutenção de computadores.</p>
+    
+    <p>É possível observar que todas as entidades parceiras exercem papel social fundamental e  que a atuação do PPGP, por meio de corpo docente e alunos, constituiu um esforço para o aperfeiçoamento dos serviços prestados por elas à sociedade potiguar.</p>
+    
+    <p>E, no ano de 2019, consolidando sua trajetória de compromisso social,  o PPGP assumiu sua primeira turma fora de sede firmando um convênio com a Universidade Federal do Cariri para formar 45 servidores ( entrada anual de 15 servidores). Sem dúvida, essa iniciativa extrapola o Rio Grande do Norte e mostra alto impacto regional de interiorização  da formação em nível de mestrado.</p>
+    
+    <p>Contata-se, pois  que o PPGP   cumpre  sua missão de pesquisa, ensino e formação de recursos humanos, especialmente nas regiões Norte e Nordeste, como mostra os  acordos/convênios de outras instituições públicas federais e estaduais firmados ao longo de sua  curta existência. </p>
+    
+    <p>Convênios em execução  ( ver  detalhe em Convênios)</p>
+    <ul>
+        <li><strong>Instituto Federal de Sergipe - IFS</strong></li>
+        <li><strong>Assembléia  Legislativa do Rio Grande do Norte - ALRN</strong></li>
+        <li><strong>Instituto Federal do Rio Grande do Norte – IFRN</strong></li>
+        <li><strong>Universidade Federal do Cariri – UFCA</strong></li>
+    </ul>
+    
+    <p>Convênios finalizados</p>
+    <ul>
+        <li><strong>Secretaria de Estado da Administração e dos Recursos Humanos do Estado do Rio Grande do Norte – SEARH</strong></li>
+        <li><strong>Base Aérea de Natal- BANT</strong></li>
+        <li><strong>Instituto de Educação, Ciência e Tecnologia da Paraíba – IFPB</strong></li>
+        <li><strong>Instituto Nacional de Colonização e Reforma Agrária – INCRA</strong></li>
+    </ul>
+    
+    <p>Termo de Compromisso</p>
+    <ul>
+        <li><strong>Universidade Federal do Rio Grande do Norte   -  Departamento de Desenvolvimento de Recursos Humanos da Pró-Reitoria de Gestão de Pessoas (DDRH/PROGESP)</strong></li>
+    </ul>
+
 
 </section>
 
