--- a/templates/public/layout.html
+++ b/templates/public/layout.html
@@ -69,9 +69,11 @@
                             <li role="separator" class="divider"></li>
                             <li class="dropdown-header">Programa</li>
 
+                            {% if std.post_graduation.initials in 'PPGP' %}
                             <li><a href="{{ url_for('public.view_impact', initials=std.post_graduation.initials) }}">
                                 <span class="glyphicon glyphicon-apple"></span> Impacto</a>
                             </li>
+                            {% endif %}
 
                             <li role="separator" class="divider"></li>
                             <li class="dropdown-header">Pesquisa e extensão</li>
