--- a/templates/admin/participations.html
+++ b/templates/admin/participations.html
@@ -17,7 +17,7 @@
     <br/>
 
     {{ form.description.label }}<br/>
-    {{ form.description(required='true', class="form-control", minlength='50', maxlength='850', placeholder="Ex: A professora Arlete participou como congressista, publicando 2 trabalhos.") }}
+    {{ form.description(required='true', class="form-control", minlength='50', placeholder="Ex: A professora Arlete participou como congressista, publicando 2 trabalhos.") }}
 
     <br/>
 
