--- a/templates/public/layout.html
+++ b/templates/public/layout.html
@@ -13,11 +13,17 @@
 
     <link rel="stylesheet" type="text/css" href="/static/bootstrap3/css/bootstrap.css"/>
     <link rel="stylesheet" type="text/css" href="/static/posgraduacao/css/general.css"/>
+    {% if "translate" in request.url %}
+    <style>
+        .glyphicon {
+        display: none;
+        }
+    </style>
+    {% endif %}
     {% block styles %}{% endblock %}
 </head>
 
 <body style="min-height: 100%">
-
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
 
@@ -40,9 +46,15 @@
 
                 <ul class="nav navbar-nav">
                     {% if std.post_graduation %}
-                    <li><a href="/{% if std.post_graduation %}{{ std.post_graduation.initials }}{% endif %}"> 
-                        <span class="glyphicon glyphicon-home"></span> Início </a></li>
-
+                    <li><a href="/{% if std.post_graduation %}{{ std.post_graduation.initials }}{% endif %}">
+                        <span class="glyphicon glyphicon-home"></span> Início </a>
+                        {% if std.post_graduation.initials in 'PPGP' %}
+                        <ul class="dropdown-menu">
+                            <li><a href="https://translate.google.com.br/translate?hl=pt-BR&sl=pt&tl=en&u=https%3A%2F%2Fposgraduacao.ccsa.ufrn.br%2FPPGP%2F">
+                                <span class="glyphicon glyphicon-blackboard"></span> Tradução</a>
+                            </li>
+                        {% endif %}
+                    </li>
                     <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         <span class="glyphicon glyphicon-education"></span> Acadêmico <span class="caret"></a>
                         <ul class="dropdown-menu">
