--- a/templates/public/layout.html
+++ b/templates/public/layout.html
@@ -47,12 +47,16 @@
                 <ul class="nav navbar-nav">
                     {% if std.post_graduation %}
                     <li><a href="/{% if std.post_graduation %}{{ std.post_graduation.initials }}{% endif %}">
-                        <span class="glyphicon glyphicon-home"></span> Início </a>
                         {% if std.post_graduation.initials in 'PPGP' %}
-                        <ul class="dropdown-menu">
+                        <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <span class="glyphicon glyphicon-home"></span> Início <span class="caret"></a>
+                            <ul class="dropdown-menu">
                             <li><a href="https://translate.google.com.br/translate?hl=pt-BR&sl=pt&tl=en&u=https%3A%2F%2Fposgraduacao.ccsa.ufrn.br%2FPPGP%2F">
                                 <span class="glyphicon glyphicon-blackboard"></span> Tradução</a>
                             </li>
+                            </ul>
+                        {% else %}
+                        <span class="glyphicon glyphicon-home"></span> Início </a>
                         {% endif %}
                     </li>
                     <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
