--- a/templates/public/layout.html
+++ b/templates/public/layout.html
@@ -153,16 +153,19 @@
                     <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         <span class="glyphicon glyphicon-file"></span> Documentos</a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ url_for('public.view_documents_resolutions', initials=std.post_graduation.initials) }}">
+                            <li><a href="{{ url_for('public.view_documents', initials=std.post_graduation.initials, document='resolucao') }}">
                                 <span class="glyphicon glyphicon-file"></span> Resoluções</a>
                             </li>
-                            <li><a href="{{ url_for('public.view_documents_atas', initials=std.post_graduation.initials) }}">
+                            <li><a href="{{ url_for('public.view_documents', initials=std.post_graduation.initials, document='ata' ) }}">
                                 <span class="glyphicon glyphicon-file"></span> ATAs</a>
                             </li>
-                            <li><a href="{{ url_for('public.view_documents_regiments', initials=std.post_graduation.initials) }}">
+                            <li><a href="{{ url_for('public.view_documents', initials=std.post_graduation.initials, document='regiments' ) }}">
                                 <span class="glyphicon glyphicon-file"></span> Regimentos</a>
                             </li>
-                            <li><a href="{{ url_for('public.view_documents_others', initials=std.post_graduation.initials) }}">
+                            <li><a href="{{ url_for('public.view_documents', initials=std.post_graduation.initials, document='reunion' ) }}">
+                                <span class="glyphicon glyphicon-file"></span> Reuniões Anuais</a>
+                            </li>
+                            <li><a href="{{ url_for('public.view_documents', initials=std.post_graduation.initials, document='outros' ) }}">
                                 <span class="glyphicon glyphicon-file"></span> Outros</a>
                             </li>
                         </ul>
