Changed text in home and changed the number of document tr

--- a/templates/public/home.html
+++ b/templates/public/home.html
@@ -24,7 +24,7 @@
     </ol>
 
     <div class="carousel-inner" role="listbox">
-        
+
         <div class="item active">
             <img class="first-slide" src="/static/assets/office_lady_using_laptop_holding_smartphone_and_coffe.jpg" 
             alt="Primeiro quadro: mulher no escritório usando laptop e segurando um smartphone e um café na mão.">
@@ -46,7 +46,7 @@
                 <div class="carousel-caption">
                     <div class="carousel-caption-content">
                         <h3>Como ingressar?</h3>
-                        <p>O edital de inscrição abre normalmente após outubro, com vagas exclusivas para instituições com convênio com o Programa.</p>
+                        <p>Edital de inscrição abre normalmente após outubro, com vagas  para instituições conveniadas com o Programa e vagas para demanda social definidas em conformidade com a  capacidade de orientação do corpo docente </p>
                         <p><a class="btn btn-lg btn-primary" href="{{ url_for('public.view_covenants', initials=std.post_graduation.initials) }}" role="button">Ver convênios</a></p>
                     </div>
                 </div>
