--- a/templates/public/documents.html
+++ b/templates/public/documents.html
@@ -18,7 +18,7 @@
     <div class="panel panel-default">
         <table class="table">
             <thead>
-                <th>Nº Resolução</th>
+                <th>Nº {{ document_number }}</th>
                 <th>Título</th>
                 <th>Baixar</th>
             </thead>
