--- a/templates/public/layout.html
+++ b/templates/public/layout.html
@@ -163,7 +163,7 @@
                                 <span class="glyphicon glyphicon-file"></span> Regimentos</a>
                             </li>
                             <li><a href="{{ url_for('public.view_documents', initials=std.post_graduation.initials, document='reunion' ) }}">
-                                <span class="glyphicon glyphicon-file"></span> Reuniões Anuais</a>
+                                <span class="glyphicon glyphicon-file"></span> Plano Quadrienais</a>
                             </li>
                             <li><a href="{{ url_for('public.view_documents', initials=std.post_graduation.initials, document='outros' ) }}">
                                 <span class="glyphicon glyphicon-file"></span> Outros</a>
