--- a/templates/public/documents.html
+++ b/templates/public/documents.html
@@ -19,7 +19,7 @@
         <table class="table">
             <thead>
                 <th>{{ document_number }}</th>
-                {% if "Planos" not in document_type %}
+                {% if "Atas" not in document_type %}
                 <th>Título</th>
                 {% else %}
                 <th>Reunião Ordinária/Extraordinária</th>
