--- a/templates/public/layout.html
+++ b/templates/public/layout.html
@@ -131,6 +131,9 @@
                             <li><a href="{{ url_for('public.view_presentations', initials=std.post_graduation.initials) }}">
                                 <span class="glyphicon glyphicon-book"></span> Apresentações em Eventos</a>
                             </li>
+                            <li><a href="{{ url_for('public.view_repository', initials=std.post_graduation.initials) }}">
+                                <span class="glyphicon glyphicon-book"></span> Repositório PPGP</a>
+                            </li>
                         </ul>
                     </li>
 
