--- a/templates/public/final_reports.html
+++ b/templates/public/final_reports.html
@@ -12,7 +12,7 @@
 
 <section>
     <header class="page-header">
-        <h2>&raquo Trabalhos de Conclusão <small>Página {{ current_page }} de {{ max_page }}</small></h2>
+        <h2>{{ title }} <small>Página {{ current_page }} de {{ max_page }}</small></h2>
         {% if current_page < max_page %}
         <a href="{{ url_for('public.view_final_reports', initials=std.post_graduation.initials, page=current_page+1) }}">
             <button type="button" class="btn btn-default pull-right" aria-label="Próxima página">
@@ -38,7 +38,7 @@
     <p>
         <a target="_blank" href="{{ report.link }}"><span class="glyphicon glyphicon-link"></span> Ver mais</a></p>
     <br/>
-    
+
     {% endfor %}
 
 </section>
