More stuff from arlete, added a preview to graduate

--- a/templates/public/graduates.html
+++ b/templates/public/graduates.html
@@ -14,10 +14,9 @@
     <header class="page-header">
         <h2>Egressos</h2>
     </header>
-    <p>Ao longo dos anos o PPGP realizou pesquisas para saber da situação dos seus alunos egressos, abaixo seguem dois desses documentos, o primeiro em formato de texto e o segundo em formato de apresentação.</p>
-<a href="https://posgraduacao.ccsa.ufrn.br/PPGP/documents/outros/Pesquisa.pdf/" target="_blank">Pesquisa em formato textual</a>
-    </br>
-<a href="https://posgraduacao.ccsa.ufrn.br/PPGP/documents/outros/Slides_pesquisa_egressos_atual.pdf/" target="_blank">Pesquisa em formato de apresentação</a>
+    <p>Abaixo seguem dois desses documentos, o primeiro em formato de texto e o segundo em formato de apresentação.</p>
+    <iframe src="http://docs.google.com/gview?url=https://posgraduacao.ccsa.ufrn.br/PPGP/documents/outros/Pesquisa.pdf/&embedded=true" style="width:45%; height:500px;" frameborder="0"></iframe>
+    <iframe src="http://docs.google.com/gview?url=https://posgraduacao.ccsa.ufrn.br/PPGP/documents/outros/Slides_pesquisa_egressos_atual.pdf/&embedded=true" style="width:45%; height:500px;" frameborder="0"></iframe>
 </section>
 
 {% endblock %}
