--- a/templates/public/home.html
+++ b/templates/public/home.html
@@ -20,13 +20,14 @@
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
-        <!--<li data-target="#myCarousel" data-slide-to="2"></li>-->
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
     </ol>
 
     <div class="carousel-inner" role="listbox">
 
         <div class="item active">
-            <img class="first-slide" src="/static/assets/office_lady_using_laptop_holding_smartphone_and_coffe.jpg" 
+            <img class="first-slide" src="/static/assets/ppgp/thumb1.jpg" 
             alt="Primeiro quadro: mulher no escritório usando laptop e segurando um smartphone e um café na mão.">
             <div class="container">
                 <div class="carousel-caption">
@@ -40,7 +41,7 @@
         </div>
 
         <div class="item">
-            <img class="second-slide" src="/static/assets/man_tie.jpg"
+            <img class="second-slide" src="/static/assets/ppgp/thumb2.jpg"
             alt="Segundo quadro: homem de terno ajustando a gravata.">
             <div class="container">
                 <div class="carousel-caption">
@@ -53,6 +54,19 @@
             </div>
         </div>
 
+        <div class="item">
+            <img class="second-slide" src="/static/assets/ppgp/thumb3.jpg"
+            alt="Segundo quadro: homem de terno ajustando a gravata.">
+            <div class="container">
+            </div>
+        </div>
+
+        <div class="item">
+            <img class="second-slide" src="/static/assets/ppgp/thumb4.jpg"
+            alt="Segundo quadro: homem de terno ajustando a gravata.">
+            <div class="container">
+            </div>
+        </div>
 <!--
         <div class="item">
             <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
