--- a/templates/public/layout.html
+++ b/templates/public/layout.html
@@ -110,6 +110,12 @@
                             <li class="dropdown-header">Programa</li>
 
                             {% if std.post_graduation.initials in 'PPGP' %}
+                            <li><a href="https://posgraduacao.ccsa.ufrn.br/PPGP/documents/outros/Livro_PPGP_Comemoracao_10_anos.pdf">
+                                <span class="glyphicon glyphicon-book"></span>História do Programa</a>
+                            </li>
+                            {% endif %}
+
+                            {% if std.post_graduation.initials in 'PPGP' %}
                             <li><a href="{{ url_for('public.view_impact', initials=std.post_graduation.initials) }}">
                                 <span class="glyphicon glyphicon-apple"></span> Impacto</a>
                             </li>
