--- a/templates/public/books.html
+++ b/templates/public/books.html
@@ -14,7 +14,7 @@
     <header class="page-header">
         <h2>Livros publicados</h2>
     </header>
-    {% for n in range(2017,2021) %}
+    {% for n in range(2021,2017,-1) %}
     <h3>Livros publicados em {{ n }}</h3>
     {% for book in publications %}
     {% if n == book.year %}
