--- a/templates/public/participations.html
+++ b/templates/public/participations.html
@@ -61,7 +61,7 @@
     {% endif %}
     {% endfor %}
 
-    <h3>Pós-Graduação</h3>
+    <h3>Pós-Doutorado</h3>
     {% for event in integrations_infos.participationsInEvents %}
     {% if "deleted" not in event %}
 
